[gd_scene format=3 uid="uid://bly1kvgorg5ec"]

[ext_resource type="Script" uid="uid://cpsngb33bq17p" path="res://scripts/Menu.gd" id="1_menu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_credits"]
bg_color = Color(0.12, 0.08, 0.08, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.6, 0.4, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Menu" type="Control" unique_id=488065882]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_menu")

[node name="ColorRect" type="ColorRect" parent="." unique_id=1219029349]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.05, 0.05, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1714177804]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -120.0
offset_right = 150.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="VBoxContainer" unique_id=959754114]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "MASCARA JAM"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="VBoxContainer" unique_id=1682206703]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "JUGAR"

[node name="CreditsButton" type="Button" parent="VBoxContainer" unique_id=1264979113]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "CRÉDITOS"

[node name="ExitButton" type="Button" parent="VBoxContainer" unique_id=2028532422]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "SALIR"

[node name="CreditsPanel" type="Panel" parent="." unique_id=942546583]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_credits")

[node name="VBoxContainer" type="VBoxContainer" parent="CreditsPanel" unique_id=923864238]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="CreditsTitle" type="Label" parent="CreditsPanel/VBoxContainer" unique_id=1482536047]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "CRÉDITOS"
horizontal_alignment = 1

[node name="CreditsText" type="Label" parent="CreditsPanel/VBoxContainer" unique_id=1816606723]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 18
text = "Desarrollado por:
David Comino

Game Jam 2026"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="CreditsPanel/VBoxContainer" unique_id=2119678983]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "VOLVER"
